--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -11,7 +11,7 @@
 
 .logo {
   margin-top: -30px;
-  margin-bottom: -80px;
+  margin-bottom: -40px;
   padding-bottom: 0;
 }
 
@@ -43,5 +43,6 @@
 .already {
   display: block;
   text-align: center;
+  padding-top: 5px;
   padding-bottom: 10px;
 }
