--- a/src/app/page/registration/registration.page.html
+++ b/src/app/page/registration/registration.page.html
@@ -9,7 +9,7 @@
 
 <ion-content padding>
 
-    <span class="divider"><img class="logo" src="assets/image/logo_words.png"></span>
+    <span class="divider"><img class="logo" src="../../../assets/image/logo_words.png"></span>
 
     <form (submit)="signUp()" [formGroup]="registrationForm">
         <ion-row class="ion-justify-content-center">
