--- a/src/app/page/forgot-password/forgot-password.page.html
+++ b/src/app/page/forgot-password/forgot-password.page.html
@@ -9,7 +9,7 @@
 
 <ion-content padding>
 
-    <span class="divider"><img class="logo" src="assets/image/logo_words.png"></span>
+    <span class="divider"><img class="logo" src="../../../assets/image/logo_words.png"></span>
 
     <form (submit)="passwordRecover()" [formGroup]="passwordRecoverForm">
         <ion-row class="ion-justify-content-center">
