--- a/src/app/page/movie_list/main.page.html
+++ b/src/app/page/movie_list/main.page.html
@@ -12,22 +12,22 @@
         <ion-col>
             <div>Popular</div>
 
-            <div class="swiper-button-prev swiper-button-black" (click)="slider.prevSlide(popularMovieSlider)"></div>
+            <div (click)="slider.prevSlide(popularMovieSlider)" class="swiper-button-prev swiper-button-black"></div>
             <ion-slides #popularMovieSlider [options]="slider.slideOpts">
                 <ion-slide *ngFor="let movie of movieList">
                     <ion-row>
                         <ion-col>
                             <ion-card>
-                                <ion-img [routerLink]="['/movie-detail/', movie.id]"
-                                     onError="this.src = '../assets/images/no-image-poster.png'"
-                                     src="https://image.tmdb.org/t/p/w500/{{movie.poster_path}}"
-                                     [alt]="movie.title"></ion-img>
+                                <ion-img [alt]="movie.title"
+                                         [routerLink]="['/movie-detail/', movie.id]"
+                                         onError="this.src = '../assets/images/no-image-poster.png'"
+                                         src="https://image.tmdb.org/t/p/w500/{{movie.poster_path}}"></ion-img>
                             </ion-card>
                         </ion-col>
                     </ion-row>
                 </ion-slide>
             </ion-slides>
-            <div class="swiper-button-next swiper-button-black" (click)="slider.nextSlide(popularMovieSlider)"></div>
+            <div (click)="slider.nextSlide(popularMovieSlider)" class="swiper-button-next swiper-button-black"></div>
         </ion-col>
     </ion-row>
 
