--- a/src/app/page/home/home.page.html
+++ b/src/app/page/home/home.page.html
@@ -41,7 +41,7 @@
     <ion-row>
         <ion-col>
             <div class="divider-wrapper">
-                <ion-item-divider><a [routerLink]="['/movie_list/', 'popular']" class="divider">Popular</a>
+                <ion-item-divider><a [routerLink]="['/movie-list/', 'popular']" class="divider">Popular</a>
                 </ion-item-divider>
             </div>
 
@@ -68,7 +68,7 @@
     <ion-row>
         <ion-col>
             <div class="divider-wrapper">
-                <ion-item-divider><a [routerLink]="['/movie_list/', 'upComing']" class="divider">Upcoming</a>
+                <ion-item-divider><a [routerLink]="['/movie-list/', 'upcoming']" class="divider">Upcoming</a>
                 </ion-item-divider>
             </div>
 
@@ -95,7 +95,7 @@
     <ion-row>
         <ion-col>
             <div class="divider-wrapper">
-                <ion-item-divider><a [routerLink]="['/movie_list/', 'topRated']" class="divider">Top Rated</a>
+                <ion-item-divider><a [routerLink]="['/movie-list/', 'topRated']" class="divider">Top Rated</a>
                 </ion-item-divider>
             </div>
 
@@ -122,7 +122,7 @@
     <ion-row>
         <ion-col>
             <div class="divider-wrapper">
-                <ion-item-divider><a [routerLink]="['/movie_list/', 'nowPlaying']" class="divider">Now Playing</a>
+                <ion-item-divider><a [routerLink]="['/movie-list/', 'nowPlaying']" class="divider">Now Playing</a>
                 </ion-item-divider>
             </div>
             <div (click)="slider.prevSlide(topRatedMovieSlider)" class="swiper-button-prev swiper-button-black"></div>
