--- a/src/app/page/home/home.page.scss
+++ b/src/app/page/home/home.page.scss
@@ -1,14 +1,5 @@
-.nav-logo {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  ion-img {
-    position: absolute;
-  }
-}
-
 .divider {
+  margin-bottom: 8px;
   font-size: 20px;
   color: black;
   text-decoration: none;
