--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
             </ion-content>
 
             <ion-footer class="ion-justify-content-center" style="text-align: center">
-                <ion-button color="dark" (click)="auth.SignOut()" type="submit">Logout</ion-button>
+                <ion-button (click)="auth.SignOut()" color="dark" type="submit">Logout</ion-button>
             </ion-footer>
         </ion-menu>
 
