--- a/src/global.scss
+++ b/src/global.scss
@@ -41,3 +41,18 @@
     border: none;
   }
 }
+
+.rating {
+  color: white;
+  font-weight: bold;
+  top: 5px;
+  right: 5px;
+  text-align: center;
+  align-items: center;
+  padding-top: 9px;
+  width: 35px;
+  height: 35px;
+  background-color: #E3110E;
+  border-radius: 50%;
+  position: absolute;
+}
