--- a/src/app/page/search/search.page.html
+++ b/src/app/page/search/search.page.html
@@ -17,7 +17,7 @@
     <loading-icon *ngIf="!isDataLoaded"></loading-icon>
     <ion-grid>
         <ion-row>
-            <ion-col *ngFor="let movie of movieList" size-md="3" size-sm="4" size-xl="2" size-xs="6">
+            <ion-col *ngFor="let movie of movieList" size-md="3" size-sm="4" size-xl="2" size-xs="6" style="display:flex;  text-align: center; align-items: center; padding: 0;">
                 <ion-card>
                     <span class="rating">{{movie.vote_average}}</span>
                     <ion-img (ionError)="coreService.handleImgError($event)"
