--- a/src/app/page/movie-detail/movie-detail.page.html
+++ b/src/app/page/movie-detail/movie-detail.page.html
@@ -1,59 +1,131 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
-    </ion-buttons>
-    <ion-buttons class="nav-logo">
-      <ion-img src="assets/image/logo_words.png"></ion-img>
-    </ion-buttons>
-  </ion-toolbar>
-  <ion-toolbar>
-    <ion-searchbar (ionFocus)="openSearchPage()" animated placeholder="Search"></ion-searchbar>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-buttons slot="start">
+            <ion-back-button></ion-back-button>
+        </ion-buttons>
+        <ion-buttons class="nav-logo">
+            <ion-img src="assets/image/logo_words.png"></ion-img>
+        </ion-buttons>
+    </ion-toolbar>
+    <ion-toolbar>
+        <ion-searchbar (ionFocus)="openSearchPage()" animated placeholder="Search"></ion-searchbar>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
 
-  <loading-icon *ngIf="!movie"></loading-icon>
+    <loading-icon *ngIf="!movie"></loading-icon>
 
-  <ion-grid *ngIf="movie">
+    <ion-grid *ngIf="movie">
+        <ion-row>
+            <ion-col>
+                <div (click)="slider.prevSlide(similarMovieSlider)"
+                     class="swiper-button-prev swiper-button-black"></div>
+                <ion-slides #similarMovieSlider [options]="slider.similarSlideOpts">
+                    <ion-slide *ngFor="let movie of similarMovies">
+                        <ion-row>
+                            <ion-col style="text-align: center; padding: 0;">
+                                <ion-card>
+                                    <span class="rating">{{movie.vote_average}}</span>
+                                    <ion-img (ionError)="coreService.handleImgError($event)"
+                                             [alt]="movie.title"
+                                             [routerLink]="['/movie-detail/', movie.id]"
+                                             src="https://image.tmdb.org/t/p/w500/{{movie.poster_path}}"></ion-img>
+                                </ion-card>
+                            </ion-col>
+                        </ion-row>
+                    </ion-slide>
+                </ion-slides>
+                <div (click)="slider.nextSlide(similarMovieSlider)"
+                     class="swiper-button-next swiper-button-black"></div>
+            </ion-col>
+        </ion-row>
 
-    <ion-row>
+        <div class="movie-overview"
+             [ngStyle]="{backgroundImage: 'url(https://image.tmdb.org/t/p/w1280/' + movie.backdrop_path + ')'}">
+            <ion-row>
 
-      <ion-col>
-        <div class="movie-poster">
-          <img onError="this.src = '../assets/images/no-image-poster.png'"
-               src="https://image.tmdb.org/t/p/w1280/{{movie.poster_path}}"/>
+                <ion-col size-md="3" size-xs="12" size-sm="5" style=" z-index: 3;">
+
+                    <div class="movie-poster">
+                        <img onError="this.src = '../assets/images/no-image-poster.png'"
+                             src="https://image.tmdb.org/t/p/w1280/{{movie.poster_path}}"/>
+                    </div>
+
+                    <ion-button (click)="showMovieTrailer();" color="danger" expand="block">
+                        <ion-icon name="play"></ion-icon>
+                        Play Trailer
+                    </ion-button>
+                </ion-col>
+
+                <ion-col style="z-index: 3;">
+                    <div class="movie-info">
+                        <h1 class="title">{{movie.title}}</h1>
+
+                        <hr>
+
+                        <h5 class="release-data"><ion-icon name="calendar-outline"></ion-icon> {{movie.release_date}}</h5>
+                        <span class="genre" *ngFor="let genre of movie.genres">{{genre.name}} </span>
+                        <span class="runtime"><ion-icon name="time-outline"></ion-icon> {{movie.runtime}}m</span>
+
+                        <hr>
+
+                        <ion-buttons>
+                            <ion-button>
+                                <ion-icon name="list-outline"></ion-icon>
+                            </ion-button>
+                            <ion-button>
+                                <ion-icon name="heart-outline"></ion-icon>
+                            </ion-button>
+                            <ion-button>
+                                <ion-icon name="bookmarks-outline"></ion-icon>
+                            </ion-button>
+                            <ion-button>
+                                <ion-icon name="star-outline"></ion-icon>
+                            </ion-button>
+                        </ion-buttons>
+
+                        <hr>
+
+                        <span class="tagline">{{movie.tagline}}</span>
+
+                        <h4 style="font-weight: bold">Overview</h4>
+                        <p class="overview">{{movie.overview}}</p>
+                    </div>
+                </ion-col>
+
+            </ion-row>
         </div>
 
-        <ion-button (click)="showMovieTrailer();" color="danger" expand="block"><ion-icon name="play"></ion-icon> Play Trailer</ion-button>
-      </ion-col>
 
-      <ion-col>
-        <h2>{{movie.title}}</h2>
+        <ion-row>
+            <ion-col>
+                <div class="cast-and-crew">
+                    <div class="divider-wrapper title">
+                        <ion-item-divider><a [routerLink]="['/movie-list/', 'popular']"
+                                             class="divider title">Cast&Crew</a>
+                        </ion-item-divider>
+                    </div>
 
-        <hr>
+                    <ion-slides #crewSlider [options]="slider.slideOpts" class="cast-list">
+                        <ion-slide *ngFor="let item of castList" class="cast-item">
+                            <div class="cast-photo">
+                                <img *ngIf="item.profile_path"
+                                     src="https://image.tmdb.org/t/p/w500/{{item.profile_path}}"/>
+                                <img *ngIf="!item.profile_path"
+                                     src="./assets/image/no-image-path.png"/>
+                            </div>
+                            <div class="cast-info">
+                                <span class="cast-name">{{item.name}}</span> <br/>
+                                <span class="cast-character">{{item.character}}</span>
+                            </div>
+                        </ion-slide>
+                    </ion-slides>
+                </div>
+            </ion-col>
+        </ion-row>
 
-        <h4>{{movie.release_date}}</h4>
-        <span *ngFor="let genre of movie.genres">{{genre.name}}</span>
-        <span>{{movie.runtime}}m</span>
 
-        <hr>
-
-        <span>buttons</span>
-
-        <hr>
-
-        <span>{{movie.tagline}}</span>
-        Overview
-        <p>{{movie.overview}}</p>
-
-
-
-      </ion-col>
-
-    </ion-row>
-
-  </ion-grid>
+    </ion-grid>
 
 </ion-content>
