--- a/src/app/page/trailer/trailer.component.scss
+++ b/src/app/page/trailer/trailer.component.scss
@@ -1,6 +1,24 @@
 .embedresize {
   width: 100%;
   height: 100%;
+  align-items: center;
+
+  .close-wrapper {
+    position: absolute;
+    width: 100%;
+    height: 11%;
+    top: 2px;
+    left: 0;
+    background-color: black;
+
+    .closeBtn {
+      position: absolute;
+      top: 10px;
+      color: white;
+    }
+  }
+
+
 
   iframe {
     width: 100%;
