--- a/src/app/page/movie-detail/movie-detail.page.html
+++ b/src/app/page/movie-detail/movie-detail.page.html
@@ -43,7 +43,7 @@
 
                         <h5 class="release-data"><ion-icon name="calendar-outline"></ion-icon> {{movie.release_date}}</h5>
                         <span class="genre" *ngFor="let genre of movie.genres">{{genre.name}} </span>
-                        <span class="runtime"><ion-icon name="time-outline"></ion-icon> {{movie.runtime}}m</span>
+                        <span class="runtime"> <ion-icon name="time-outline"></ion-icon>{{movie.runtime}}min</span>
 
                         <hr>
 
