--- a/src/app/page/movie-detail/movie-detail.page.scss
+++ b/src/app/page/movie-detail/movie-detail.page.scss
@@ -124,7 +124,15 @@ ion-card:hover {
   }
 
   .runtime {
-
+    margin-left: 30px;
+    padding-left: 3px;
+    position: relative;
+    ion-icon {
+      position: absolute;
+      top: -1px;
+      left: -20px;
+      font-size: 19px;
+    }
   }
 
   .tagline {
