--- a/src/app/page/movie-detail/movie-detail.page.scss
+++ b/src/app/page/movie-detail/movie-detail.page.scss
@@ -107,7 +107,7 @@ ion-card:hover {
 }
 
 .movie-info {
-  padding: 15px;
+  padding: 30px;
   padding-top: 35px;
 
   .title {
@@ -124,15 +124,6 @@ ion-card:hover {
   }
 
   .runtime {
-    margin-left: 30px;
-    padding-left: 3px;
-    position: relative;
-    ion-icon {
-      position: absolute;
-      top: -1px;
-      left: -20px;
-      font-size: 19px;
-    }
   }
 
   .tagline {
@@ -145,3 +136,45 @@ ion-card:hover {
 
   }
 }
+
+
+.profile-btn {
+
+  ion-button {
+    margin-right: 20px;
+    font-size: 20px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50% !important;
+  }
+}
+
+@media screen and (max-width: 720px) {
+  .movie-info {
+    text-align: center;
+    padding: 15px;
+    padding-top: 0px;
+  }
+
+  .profile-btn {
+
+    ion-button {
+      margin-right: 0;
+    }
+  }
+
+  .swiper-button-prev {
+    visibility: hidden;
+  }
+
+  .swiper-button-next {
+    visibility: hidden;
+  }
+
+  .profile-btn {
+    justify-content: space-between;
+  }
+}
+
+
+
