--- a/src/app/page/movie-detail/movie-detail.page.html
+++ b/src/app/page/movie-detail/movie-detail.page.html
@@ -49,22 +49,26 @@
 
                         <hr>
 
-                        <span class="runtime"> <ion-icon name="time-outline"></ion-icon>{{movie.runtime}}min</span>
+                        <div class="runtime">
+                            <ion-icon name="time-outline"></ion-icon>
+                            <span>{{movie.runtime}}min</span>
+                        </div>
+
 
                         <hr>
 
                         <ion-buttons class="profile-btn">
                             <ion-button fill="solid" color="dark" shape="round">
-                                <ion-icon name="list-outline"></ion-icon>
+                                <ion-icon name="list"></ion-icon>
                             </ion-button>
                             <ion-button fill="solid" color="dark" shape="round">
-                                <ion-icon name="heart-outline"></ion-icon>
+                                <ion-icon name="heart"></ion-icon>
                             </ion-button>
                             <ion-button fill="solid" color="dark" shape="round">
-                                <ion-icon name="bookmarks-outline"></ion-icon>
+                                <ion-icon name="bookmarks"></ion-icon>
                             </ion-button>
                             <ion-button fill="solid" color="dark" shape="round">
-                                <ion-icon name="star-outline"></ion-icon>
+                                <ion-icon name="star"></ion-icon>
                             </ion-button>
                         </ion-buttons>
 
