--- a/src/app/page/movie-detail/movie-detail.page.html
+++ b/src/app/page/movie-detail/movie-detail.page.html
@@ -58,16 +58,16 @@
                         <hr>
 
                         <ion-buttons class="profile-btn">
-                            <ion-button fill="solid" color="dark" shape="round">
+                            <ion-button shape="round">
                                 <ion-icon name="list"></ion-icon>
                             </ion-button>
-                            <ion-button fill="solid" color="dark" shape="round">
+                            <ion-button shape="round">
                                 <ion-icon name="heart"></ion-icon>
                             </ion-button>
-                            <ion-button fill="solid" color="dark" shape="round">
+                            <ion-button shape="round">
                                 <ion-icon name="bookmarks"></ion-icon>
                             </ion-button>
-                            <ion-button fill="solid" color="dark" shape="round">
+                            <ion-button shape="round">
                                 <ion-icon name="star"></ion-icon>
                             </ion-button>
                         </ion-buttons>
