--- a/src/app/page/movie-detail/movie-detail.page.html
+++ b/src/app/page/movie-detail/movie-detail.page.html
@@ -45,7 +45,10 @@
 
                         <hr>
 
-                        <span class="genre" *ngFor="let genre of movie.genres">{{genre.name}} </span>
+                        <span class="genre" *ngFor="let genre of movie.genres">
+                            <ion-label fill="clear" [routerLink]="['/movie-list/', 'category']" [queryParams]="{genre : genre.id}">{{genre.name}}
+                            </ion-label>
+                        </span>
 
                         <hr>
 
