--- a/src/app/page/account/account.page.html
+++ b/src/app/page/account/account.page.html
@@ -23,7 +23,7 @@
                     <ion-label>Watchlist</ion-label>
                 </ion-tab-button>
 
-                <ion-tab-button tab="favorite">
+                <ion-tab-button tab="favorite" selected>
                     <ion-icon name="heart"></ion-icon>
                     <ion-label>Favorites</ion-label>
                 </ion-tab-button>
